Show 'Extract' menu on archives without extension

determineMimeType() needs the absolute path of the archive, otherwise
the QFileInfo::isReadable() check will always return false (it will then
fallback to `mimeFromExtension`, but that's also invalid if the archive
doesn't have an extension).

BUG: 399806
FIXED-IN: 18.08.3